[gd_scene load_steps=3 format=3 uid="uid://dgi18ced4wf7k"]

[ext_resource type="Script" path="res://scripts/menus/all_stages_clear_menu.gd" id="1_1sd8v"]
[ext_resource type="FontFile" uid="uid://y2fv3f1jprtd" path="res://assets/fonts/bb.ttf" id="2_7js2y"]

[node name="all_stages_cleared_menu" type="Control"]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
script = ExtResource("1_1sd8v")

[node name="all_stages_clear_label" type="Label" parent="."]
layout_mode = 0
offset_left = 432.0
offset_top = 213.0
offset_right = 1252.0
offset_bottom = 524.0
theme_override_colors/font_color = Color(0.952941, 0.239216, 0, 1)
theme_override_fonts/font = ExtResource("2_7js2y")
theme_override_font_sizes/font_size = 130
text = "Congratulations!!
All Stages Clear !"
horizontal_alignment = 1

[node name="restart_button" type="Button" parent="."]
layout_mode = 0
offset_left = 727.0
offset_top = 552.0
offset_right = 948.0
offset_bottom = 619.0
theme_override_fonts/font = ExtResource("2_7js2y")
theme_override_font_sizes/font_size = 50
text = "Restart
"

[node name="quit_button" type="Button" parent="."]
layout_mode = 0
offset_left = 727.0
offset_top = 628.0
offset_right = 948.0
offset_bottom = 695.0
theme_override_fonts/font = ExtResource("2_7js2y")
theme_override_font_sizes/font_size = 50
text = "Quit"

[node name="note_label" type="Label" parent="."]
layout_mode = 0
offset_left = 484.0
offset_top = 720.0
offset_right = 1225.0
offset_bottom = 919.0
text = "You've completed all the levels I have so far! If you've enjoyed playing this game please check back at chaduke.itch.io for regular development updates.  Also check out my YouTube channel - youtube.com/chaddore - for video updates at least once a week.  Also consider supporting my work at - chaduke.github.io/support-me  I plan on making 100 levels, tons of cool sounds, 3D backgrounds and original music with many different ways to customize your experience.    You taking the time to play game means the world to me! -Chad Dore'"
autowrap_mode = 3

[connection signal="pressed" from="restart_button" to="." method="_on_restart_button_pressed"]
[connection signal="pressed" from="quit_button" to="." method="_on_quit_button_pressed"]
